Thu Jun 19 21:38:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): check if compile before showing message.

Thu Jun 19 21:35:32 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: supported multiple snapshots.

Thu Jun 19 20:37:00 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/net/pop.rb (Net::POP3#set_all_uids): speed
	  up. a patch from <m-sumi AT techfirm.co.jp> [ruby-list:45047]

Thu Jun 19 17:44:15 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/etc/etc.c (Init_etc): define constant aliases Etc::Passwd
	  and Etc::Group.  [ruby-dev:35150]

Thu Jun 19 17:37:21 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_alloc): specify 'inline' modifier.

	* string.c (str_alloc): remove cSymbol hack that no longer
	  necessary.

	* string.c (scan_once): avoid retrieving encoding info unless
	  necessary.

Thu Jun 19 17:19:14 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_scan): String#scan should preserve last
	  successful match data.  [ruby-dev:35106]

Thu Jun 19 16:49:36 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* missing/acosh.c (atanh): should set ERANGE to errno if parameter
	  is the boundary case. fixed [ruby-dev:35155]

Thu Jun 19 16:06:01 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/tile/treeview.rb: cannot configure tags.

Thu Jun 19 11:48:33 2008  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_enumerator.rb: fix to skip "with_memo" test.

Thu Jun 19 11:40:55 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_throw): fix "return" process from "lambda".

	* bootstraptest/test_proc.rb: add a test.

	* bootstraptest/pending.rb: add a pending bug.

Thu Jun 19 00:33:40 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/etc/test_etc.rb: avoid infinite loop.  [ruby-dev:35158]

Wed Jun 18 23:07:19 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_newobj): prohibit call of rb_newobj() during gc.